--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -305,6 +305,8 @@
                   	<div class="guiblock top-margin-2lines">
                  	  <span id="price" class="centered_text" style="font-size:4em; display: block; margin:0 auto">60€</span>
                     </div>
+                    <div id="availability">
+                    </div>                    
                   </div>
                 </div>
               </div>
