--- a/views/_not_assigned_bookings.erb
+++ b/views/_not_assigned_bookings.erb
@@ -1,14 +1,63 @@
-<h3><%=t.not_assigned_bookings.title%></h3>
+<div>
+  <form name="filter" class="guiblock">
+         <h3 class="left-float" style="position: relative; top: 5px">Reservas</h3>
+    <div class="formrow right-float">
+      <select id="filter" class="fieldcontrol">
+        <option value="pending">Mostrar pendientes de asignar</option>
+        <option value="all">Mostrar todos</option>
+      </select>
+    </div>
+  </form>
+</div>
+<div class="elements-list" style="clear:both">
   <table id="elements_table" class="table">
      <thead class="table-header">
        <tr>
-         <th class="table-header-title" scope="col" style="width:10%"><%= t.not_assigned_bookings.table.id %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.category %></th>         
-         <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.dates %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:25%"><%= t.booking_management.table.customer %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.booking_management.table.status %></th>
+         <th class="table-header-title" scope="col" style="width:5%"><%= t.not_assigned_bookings.table.id %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:5%"><%= t.not_assigned_bookings.table.category %></th> 
+         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.not_assigned_bookings.table.date_from %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.not_assigned_bookings.table.date_to %></th>         
+         <th class="table-header-title centered_text" scope="col" style="width:20%"><%= t.not_assigned_bookings.table.customer %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.not_assigned_bookings.table.phone %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:50%"><%= t.not_assigned_bookings.table.resource %></th>          
        </tr>
      </thead>
      <tbody id="elements_tbody" class="table-tbody">             
      </tbody>
   </table>
+</div>
+  <script type="text/tmpl" id="script_booking_line">
+    <tr class="table-row">
+      <td class="table-cell left_text"><a href="/admin/booking/bookings/<%%= entity.id %>"><%%= entity.id %></a></td>
+      <td class="table-cell centered_text"><%%= entity.item_id %></td>
+      <td class="table-cell centered_text"><%%= formatter.formatDate(entity.date_from,'dd.MM.yyyy') %> </td>
+      <td class="table-cell centered_text"><%%= formatter.formatDate(entity.date_to,'dd.MM.yyyy') %> </td>
+      <td class="table-cell centered_text"><%%= entity.customer_name %> <%%=entity.customer_surname%></td>
+      <td class="table-cell centered_text"><%%= entity.customer_phone %> <%%=entity.customer_mobile_phone%></td>      
+      <td class="table-cell centered_text">
+        <%% if (entity.booking_item_reference) { %>
+        <form>
+        <div class="formrow">
+          <select name="booking_item_reference" class="fieldcontrol">
+            <%% for (var idx=0;idx<resources.length;idx++) { %>
+              <option value="<%%=resources[idx]%>" <%% if (resources[idx]==entity.booking_item_reference){%>selected="selected" <%%}%> ><%%=resources[idx]%></option>
+            <%% } %>           
+          </select>
+          <button type="button" class="form-button blue-button"><%=t.not_assigned_bookings.form.reassign%></button>
+        </div>
+        </form>        
+        <%% } else { %>
+        <form>
+        <div class="formrow">
+          <select name="booking_item_reference" class="fieldcontrol">
+            <%% for (var idx=0;idx<resources.length;idx++) { %>
+              <option value="<%%=resources[idx]%>" <%% if (resources[idx]==entity.booking_item_reference){%>selected="selected" <%%}%> ><%%=resources[idx]%></option>
+            <%% } %> 
+          </select>
+          <button type="button" class="form-button green-button"><%=t.not_assigned_bookings.form.assign%></button>
+        </div>
+        </form>
+        <%% } %>
+      </td>      
+    </tr>
+  </script>  
