--- a/views/_not_assigned_bookings.erb
+++ b/views/_not_assigned_bookings.erb
@@ -36,6 +36,7 @@
       <td class="table-cell centered_text"><%%= entity.customer_phone %> <%%=entity.customer_mobile_phone%></td>      
       <td class="table-cell centered_text">
         <%% if (entity.booking_item_reference) { %>
+            <%% if (resources) { %>
         <form>
         <div class="formrow">
           <input type="hidden" name="id" value="<%%=entity.id%>"/>
@@ -47,18 +48,21 @@
           <button type="button" class="reassign_button form-button blue-button"><%=t.not_assigned_bookings.form.reassign%></button>
         </div>
         </form>        
+            <%% } %>
         <%% } else { %>
+        <%% if (resources) { %> 
         <form>
-        <div class="formrow">
-          <input type="hidden" name="id" value="<%%=entity.id%>"/>
-          <select name="booking_item_reference" class="fieldcontrol">
-            <%% for (var idx=0;idx<resources.length;idx++) { %>
-              <option value="<%%=resources[idx]%>" <%% if (resources[idx]==entity.booking_item_reference){%>selected="selected" <%%}%> ><%%=resources[idx]%></option>
-            <%% } %> 
-          </select>
-          <button type="button" class="assign_button form-button green-button"><%=t.not_assigned_bookings.form.assign%></button>
-        </div>
-        </form>
+          <div class="formrow">
+             <input type="hidden" name="id" value="<%%=entity.id%>"/>
+             <select name="booking_item_reference" class="fieldcontrol">
+              <%% for (var idx=0;idx<resources.length;idx++) { %>
+                <option value="<%%=resources[idx]%>" <%% if (resources[idx]==entity.booking_item_reference){%>selected="selected" <%%}%> ><%%=resources[idx]%></option>
+              <%% } %> 
+             </select>
+              <button type="button" class="assign_button form-button green-button"><%=t.not_assigned_bookings.form.assign%></button>
+             </div>
+           </form>
+           <%% } %>
         <%% } %>
       </td>      
     </tr>
